# advent-of-code-2024

./: asset-manifest.json  eslint.config.mjs  index.html  package-lock.json  package.json
adr/: 0000-use-markdown-architectural-decision-records.md  0001-use-react.md  0002-web-hosting-github-pages.md  0003-use-material-ui.md  0004-also-use-python.md  adr-template-minimal.md
js/: package-lock.json
js/public/: index.html
js/src/: reportWebVitals.ts
py/: .gitignore  README.md  hello.py  main.py  pyproject.toml
py/core/: codegen.py  utils.py
py/core/templates/: daily_template.jinja  daily_test_template.jinja  init_template.jinja
py/solutions/: __init__.py  base.py  day_1.py  day_10.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py
py/solutions/helpers/: day_7.py  grid_utils.py
py/solutions/helpers/day_6/: __init__.py  guard.py  map.py
py/solutions/tests/: test_day_1.py  test_day_10.py  test_day_2.py  test_day_3.py  test_day_4.py  test_day_5.py  test_day_6.py  test_day_7.py  test_day_8.py  test_day_9.py
src/: App.tsx  Day.tsx
static/css/: main.f855e6bc.css.map
static/js/: 453.c1f681de.chunk.js  453.c1f681de.chunk.js.map  main.032ed379.js  main.032ed379.js.map  main.afbfa50e.js  main.afbfa50e.js.map  main.b1532182.js  main.b1532182.js.map  main.ef0b159b.js  main.ef0b159b.js.map  main.fe6ff7fe.js  main.fe6ff7fe.js.map
